--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
         <h1>Born Buffalo</h1>
         <h3>Can you spot the difference?</h3>
         <p class="msg">0 differences found.</p>
+        <div class="2-wrapper" style="margin: 1rem;">
+          <a href="1.webp" target="_blank">View Original Image</a>
+          <a href="2.webp" target="_blank">View Different Image</a>
+        </div>
     </div>
     <div class="game-container">
-        <div class="image-wrapper">
+        <div class="image-wrapper ogimg">
           <img src="1.webp" alt="Original Image" class="original-image">
         </div>
         
-        <div class="image-wrapper">
+        <div class="image-wrapper dfimg">
           <img src="2.webp" alt="Spot the Difference" class="different-image">
           <div class="overlay">
             <div class="clickable-area" data-difference="1" style="top: 30%; left: 48%; width: 5%; height: 6%;"></div>
@@ -29,6 +33,7 @@
           </div>
         </div>
       </div>
-      
+      <div class="spacer" style="height: 200px;"></div>
+      <p id="copyright">Developed by Jordan, <a href="https://newyorkglobalmarketingsolutions.com/" target="_blank">New York Marketing</a>, and <a href="https://bornbuffalo.com/" target="_blank">Born Buffalo</a>.</p>
 </body>
 </html>
