--- a/game-4.html
+++ b/game-4.html
@@ -21,6 +21,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <a href="/index.html" class="back-to-home">Back to Home</a>
     <!-- Main Content Wrapper -->
     <div class="wrapper">
         <h1>Born Buffalo</h1>
@@ -31,18 +32,18 @@
     <!-- Game Container -->
     <div class="game-container">
         <div class="image-wrapper ogimg">
-            <img src="/src/IMGS/changed.jpg" alt="Original Image" class="original-image">
+            <img src="/src/IMGS/game-4-og.jpg" alt="Original Image" class="original-image">
         </div>
         
         <div class="image-wrapper dfimg">
-            <img src="/src/IMGS/og.jpg" alt="Spot the Difference" class="different-image">
+            <img src="/src/IMGS/game-4-diff.jpg" alt="Spot the Difference" class="different-image">
             <div class="overlay">
                 <!-- Clickable areas for differences -->
-                <div class="clickable-area" data-difference="1" style="top: 23%; left: 0%; width: 15.3%; height: 40%; border-bottom-right-radius: 75%; border-top-right-radius: 50%;"></div>
-                <div class="clickable-area" data-difference="2" style="top: 27%; left: 42%; width: 6%; height: 6%;"></div>
-                <div class="clickable-area" data-difference="3" style="top: 16.5%; left: 63.5%; width: 13%; height: 17%; border-radius: 50%;"></div>
-                <div class="clickable-area" data-difference="4" style="top: 32%; left: 73.5%; width: 5%; height: 5%; border-radius: 50%;"></div>
-                <div class="clickable-area" data-difference="5" style="top: 43%; left: 50%; width: 13%; height: 7%; transform: rotate(50deg);"></div>
+                <div class="clickable-area" data-difference="1" style="top: 0%; left: 29%; width: 15%; height: 15%;"></div>
+                <div class="clickable-area" data-difference="2" style="top: 48%; left: 15.78%; width: 5%; height: 17%; transform: rotate(10deg);"></div>
+                <div class="clickable-area" data-difference="3" style="top: 60%; left: 46%; width: 13%; height: 15%; border-radius: 50%;"></div>
+                <div class="clickable-area" data-difference="4" style="top: 76%; left: 32%; width: 20%; height: 22%;"></div>
+                <div class="clickable-area" data-difference="5" style="top: 10%; left: 71%; width: 15%; height: 5%; transform: rotate(132deg);"></div>
             </div>
         </div>
     </div>
@@ -63,9 +64,9 @@
     <!-- Spacer for better layout -->
     <div class="spacer" style="height: 100px;"></div>
     <div class="t-wrapper" style="margin: 1rem;">
-        <a href="/src/IMGS/changed.jpg" target="_blank" class="main-btn">View Original Image</a>
+        <a href="/src/IMGS/game-4-og.jpg" target="_blank" class="main-btn">View Original Image</a>
         <div class="spacer" style="height: 25px;"></div>
-        <a href="/src/IMGS/og.jpg" target="_blank" class="main-btn">View Different Image</a>
+        <a href="/src/IMGS/game-4-diff.jpg" target="_blank" class="main-btn">View Different Image</a>
     </div>
     <div class="spacer" style="height: 100px;"></div>
 
