--- a/game-4.html
+++ b/game-4.html
@@ -25,8 +25,8 @@
     <!-- Main Content Wrapper -->
     <div class="wrapper">
         <h1>Born Buffalo</h1>
-        <p>Spot the difference in the 2 photos.</p>
-        <p class="msg">0 differences found.</p>
+        <p class="msg">Spot the differences.</p>
+        <div class="timer" id="timer">Timer starting now!</div>
     </div>
 
     <!-- Game Container -->
@@ -70,7 +70,5 @@
     </div>
     <div class="spacer" style="height: 100px;"></div>
 
-    <!-- Footer with copyright information -->
-    <p id="copyright">Developed by Jordan, <a href="https://newyorkglobalmarketingsolutions.com/" target="_blank">New York Marketing</a>, and <a href="https://bornbuffalo.com/" target="_blank">Born Buffalo</a>.</p>
 </body>
 </html>
