--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Spot the Difference game with 5 fun and challenging levels. Test your observation skills!">
+    <meta name="keywords" content="Spot the Difference, Puzzle Games, Observation Challenge">
+    <meta name="author" content="Your Name or Website">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self'; style-src 'self';">
     <title>Spot the Difference</title>
     <link rel="stylesheet" href="./src/CSS/home.css">
 </head>
@@ -12,36 +16,36 @@
             <h1>Spot the 5 Differences</h1>
             <p>Test your observation skills across various challenges!</p>
         </header>
-        <div class="grid">
-            <a href="./game-1.html" class="grid-item">
+        <div class="grid" role="list">
+            <a href="./game-1.html" class="grid-item" role="listitem">
                 <img src="./src/IMGS/game-1-og.webp" alt="Game 1">
                 <div class="item-info">
                     <h2>MVP Allen</h2>
-                    <p>Spot the differnce between these two photos!</p>
+                    <p>Spot the difference between these two photos!</p>
                 </div>
             </a>
-            <a href="./game-2.html" class="grid-item">
+            <a href="./game-2.html" class="grid-item" role="listitem">
                 <img src="./src/IMGS/game-2-og.jpg" alt="Game 2">
                 <div class="item-info">
                     <h2>Seasonal Sweets</h2>
                     <p>Spot the difference between these two photos!</p>
                 </div>
             </a>
-            <a href="./game-3.html" class="grid-item">
+            <a href="./game-3.html" class="grid-item" role="listitem">
                 <img src="./src/IMGS/game-3-og.jpg" alt="Game 3">
                 <div class="item-info">
                     <h2>Cranberry Chaos</h2>
                     <p>Spot the difference between these two photos!</p>
                 </div>
             </a>
-            <a href="./game-4.html" class="grid-item">
+            <a href="./game-4.html" class="grid-item" role="listitem">
                 <img src="./src/IMGS/game-4-og.jpg" alt="Game 4">
                 <div class="item-info">
                     <h2>Goin' Nuts</h2>
                     <p>Spot the difference between these two photos!</p>
                 </div>
             </a>
-            <a href="./game-5.html" class="grid-item">
+            <a href="./game-5.html" class="grid-item" role="listitem">
                 <img src="./src/IMGS/game-5-og.jpg" alt="Game 5">
                 <div class="item-info">
                     <h2>Fruit Party</h2>
