--- a/game-1.html
+++ b/game-1.html
@@ -6,8 +6,8 @@
     <title>Spot The Difference</title>
     
     <!-- Linking CSS Stylesheets -->
-    <link rel="stylesheet" href="/src/CSS/style.css">
-    <link rel="stylesheet" href="/src/CSS/confetti.css">
+    <link rel="stylesheet" href="src/CSS/style.css">
+    <link rel="stylesheet" href="src/CSS/confetti.css">
 
     <!-- Adding JS Modules with Defer to improve page load -->
     <script type="module" src="src/JAVASCRIPT/script.js" defer></script>
@@ -21,7 +21,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <a href="/index.html" class="back-to-home">Back to Home</a>
+    <a href="/spot-the-difference" class="back-to-home">Back to Home</a>
     <!-- Main Content Wrapper -->
     <div class="wrapper">
         <h1>Born Buffalo</h1>
@@ -33,11 +33,11 @@
     <!-- Game Container -->
     <div class="game-container">
         <div class="image-wrapper ogimg">
-            <img src="/src/IMGS/game-1-og.webp" alt="Original Image" class="original-image">
+            <img src="src/IMGS/game-1-og.webp" alt="Original Image" class="original-image">
         </div>
         
         <div class="image-wrapper dfimg">
-            <img src="/src/IMGS/game-1-diff.webp" alt="Spot the Difference" class="different-image">
+            <img src="src/IMGS/game-1-diff.webp" alt="Spot the Difference" class="different-image">
             <div class="overlay">
                 <!-- Clickable areas for differences -->
                 <div class="clickable-area" data-difference="1" style="top: 30%; left: 48%; width: 5%; height: 6%;"></div>
@@ -49,13 +49,6 @@
         </div>
     </div>
 
-    <!-- Game Winner Modal -->
-    <div class="game-winner">
-        <h4>Born Buffalo</h4>
-        <p>Congratulations! You spotted all the differences.</p>
-        <button id="closeBtn">CLOSE</button>
-    </div>
-
     <!-- Confetti container -->
     <div class="confetti-container"></div>
 
@@ -65,9 +58,9 @@
     <!-- Spacer for better layout -->
     <div class="spacer" style="height: 100px;"></div>
     <div class="t-wrapper" style="margin: 1rem;">
-        <a href="/src/IMGS/game-1-og.webp" target="_blank" class="main-btn">View Original Image</a>
+        <a href="src/IMGS/game-1-og.webp" target="_blank" class="main-btn">View Original Image</a>
         <div class="spacer" style="height: 25px;"></div>
-        <a href="/src/IMGS/game-1-diff.webp" target="_blank" class="main-btn">View Different Image</a>
+        <a href="src/IMGS/game-1-diff.webp" target="_blank" class="main-btn">View Different Image</a>
     </div>
     <div class="spacer" style="height: 100px;"></div>
 
