--- a/game-4.html
+++ b/game-4.html
@@ -6,8 +6,8 @@
     <title>Spot The Difference - 2</title>
     
     <!-- Linking CSS Stylesheets -->
-    <link rel="stylesheet" href="/src/CSS/style.css">
-    <link rel="stylesheet" href="/src/CSS/confetti.css">
+    <link rel="stylesheet" href="src/CSS/style.css">
+    <link rel="stylesheet" href="src/CSS/confetti.css">
 
     <!-- Adding JS Modules with Defer to improve page load -->
     <script type="module" src="src/JAVASCRIPT/script.js" defer></script>
@@ -21,7 +21,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <a href="/index.html" class="back-to-home">Back to Home</a>
+    <a href="index.html" class="back-to-home">Back to Home</a>
     <!-- Main Content Wrapper -->
     <div class="wrapper">
         <h1>Born Buffalo</h1>
@@ -32,11 +32,11 @@
     <!-- Game Container -->
     <div class="game-container">
         <div class="image-wrapper ogimg">
-            <img src="/src/IMGS/game-4-og.jpg" alt="Original Image" class="original-image">
+            <img src="src/IMGS/game-4-og.jpg" alt="Original Image" class="original-image">
         </div>
         
         <div class="image-wrapper dfimg">
-            <img src="/src/IMGS/game-4-diff.jpg" alt="Spot the Difference" class="different-image">
+            <img src="src/IMGS/game-4-diff.jpg" alt="Spot the Difference" class="different-image">
             <div class="overlay">
                 <!-- Clickable areas for differences -->
                 <div class="clickable-area" data-difference="1" style="top: 0%; left: 29%; width: 15%; height: 15%;"></div>
@@ -64,9 +64,9 @@
     <!-- Spacer for better layout -->
     <div class="spacer" style="height: 100px;"></div>
     <div class="t-wrapper" style="margin: 1rem;">
-        <a href="/src/IMGS/game-4-og.jpg" target="_blank" class="main-btn">View Original Image</a>
+        <a href="src/IMGS/game-4-og.jpg" target="_blank" class="main-btn">View Original Image</a>
         <div class="spacer" style="height: 25px;"></div>
-        <a href="/src/IMGS/game-4-diff.jpg" target="_blank" class="main-btn">View Different Image</a>
+        <a href="src/IMGS/game-4-diff.jpg" target="_blank" class="main-btn">View Different Image</a>
     </div>
     <div class="spacer" style="height: 100px;"></div>
 
